// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`eot > eot 1`] = `
{
  "hash": "2750719ba61570365a121a2e5af958164db3cc07da51a92d89621974cd5126d6",
  "newSize": "6.83 kB",
  "originSize": "2.07 MB",
}
`;

exports[`eot > eot 2 ttf 1`] = `
{
  "hash": "3411e53f99d10f61099014e3411c3b07250c14911ce3228a972c7b86f528320e",
  "newSize": "6.63 kB",
  "originSize": "2.07 MB",
}
`;

exports[`eot > eot 2 woff 1`] = `
{
  "hash": "e575f399559aa7515331bcac1656b7129af19c0ffd0f6f3d40edf9ab542dec88",
  "newSize": "6.70 kB",
  "originSize": "2.07 MB",
}
`;

exports[`eot > eot 2 woff2 1`] = `
{
  "hash": "d674312638c499b7137a116536c1019cb8a263e16fe1f2561cf68316535cfde3",
  "newSize": "3.50 kB",
  "originSize": "2.07 MB",
}
`;

exports[`icon font > css 1`] = `
{
  "hash": "d148b1961a21a41c157dced63d86b29a2eee08b9044a0feb02e7e7df6fcb3d5a",
  "newSize": "4.93 kB",
  "originSize": "2.10 MB",
}
`;

exports[`icon font > html + css 1`] = `
{
  "hash": "d148b1961a21a41c157dced63d86b29a2eee08b9044a0feb02e7e7df6fcb3d5a",
  "newSize": "4.93 kB",
  "originSize": "2.10 MB",
}
`;

exports[`icon font > html 1`] = `
{
  "hash": "861a016c783b596ce167143deb3a922a7ef3d0a34d85ae90ebe959c12ced78af",
  "newSize": "4.45 kB",
  "originSize": "2.10 MB",
}
`;

exports[`otf > otf 2 eot 1`] = `
{
  "hash": "6acdca7e4cac5c098dd352def7f7dac6151dd5b56563e0510c0359df2c7a1fc1",
  "newSize": "7.16 kB",
  "originSize": "1.63 MB",
}
`;

exports[`otf > otf 2 ttf 1`] = `
{
  "hash": "4f34239d3e8848b4c15dbb8de3ff0a5a1cf59e5984bf6e9a31d50197264fdf3d",
  "newSize": "6.96 kB",
  "originSize": "1.63 MB",
}
`;

exports[`otf > otf 2 woff 1`] = `
{
  "hash": "cb390114bae304b8358c46e650c2cc01887c5c7cc26cec1995114ed2d1a548e2",
  "newSize": "7.03 kB",
  "originSize": "1.63 MB",
}
`;

exports[`otf > otf 2 woff2 1`] = `
{
  "hash": "0c571af6c677db43bfddea91616e26126d6ca22af92a2b9ef51a2c1868cb8c91",
  "newSize": "3.63 kB",
  "originSize": "1.63 MB",
}
`;

exports[`ttf > ttf 1`] = `
{
  "hash": "3411e53f99d10f61099014e3411c3b07250c14911ce3228a972c7b86f528320e",
  "newSize": "6.63 kB",
  "originSize": "2.10 MB",
}
`;

exports[`ttf > ttf 2 eot 1`] = `
{
  "hash": "2750719ba61570365a121a2e5af958164db3cc07da51a92d89621974cd5126d6",
  "newSize": "6.83 kB",
  "originSize": "2.10 MB",
}
`;

exports[`ttf > ttf 2 woff 1`] = `
{
  "hash": "e575f399559aa7515331bcac1656b7129af19c0ffd0f6f3d40edf9ab542dec88",
  "newSize": "6.70 kB",
  "originSize": "2.10 MB",
}
`;

exports[`ttf > ttf 2 woff2 1`] = `
{
  "hash": "d674312638c499b7137a116536c1019cb8a263e16fe1f2561cf68316535cfde3",
  "newSize": "3.50 kB",
  "originSize": "2.10 MB",
}
`;

exports[`woff > woff 1`] = `
{
  "hash": "e575f399559aa7515331bcac1656b7129af19c0ffd0f6f3d40edf9ab542dec88",
  "newSize": "6.70 kB",
  "originSize": "2.07 MB",
}
`;

exports[`woff > woff 2 eot 1`] = `
{
  "hash": "2750719ba61570365a121a2e5af958164db3cc07da51a92d89621974cd5126d6",
  "newSize": "6.83 kB",
  "originSize": "2.07 MB",
}
`;

exports[`woff > woff 2 ttf 1`] = `
{
  "hash": "3411e53f99d10f61099014e3411c3b07250c14911ce3228a972c7b86f528320e",
  "newSize": "6.63 kB",
  "originSize": "2.07 MB",
}
`;

exports[`woff > woff 2 woff 1`] = `
{
  "hash": "e575f399559aa7515331bcac1656b7129af19c0ffd0f6f3d40edf9ab542dec88",
  "newSize": "6.70 kB",
  "originSize": "2.07 MB",
}
`;

exports[`woff2 > woff2 1`] = `
{
  "hash": "d674312638c499b7137a116536c1019cb8a263e16fe1f2561cf68316535cfde3",
  "newSize": "3.50 kB",
  "originSize": "942.54 kB",
}
`;

exports[`woff2 > woff2 2 eot 1`] = `
{
  "hash": "2486ff4cbc1b1bad41b2dfa7088fe69125c52a7e922337fe93caf2130ae7215c",
  "newSize": "6.83 kB",
  "originSize": "942.54 kB",
}
`;

exports[`woff2 > woff2 2 ttf 1`] = `
{
  "hash": "710937d80c717c24fd5636deae82feb1f71d0c134a2e7d15a968785259f7711c",
  "newSize": "6.63 kB",
  "originSize": "942.54 kB",
}
`;

exports[`woff2 > woff2 2 woff 1`] = `
{
  "hash": "d30834d9f45cbfb6c7fc9f2e578636d47efafb3dbfedbc188c01bfdcb393f96d",
  "newSize": "6.70 kB",
  "originSize": "942.54 kB",
}
`;
